--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
+# Public key (safe to expose in frontend)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 
-# https://www.builder.io/c/docs/using-your-api-key
-VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
-PING_MESSAGE="ping pong"
+# Secret key (NEVER expose this - keep it server-side only)
+STRIPE_SECRET_KEY=sk_test_your_secret_key_here
+
+# Optional: Stripe webhook secret (for production)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+VITE_GOOGLE_API_KEY=AIzaSyD3lKqpxoBIUoxpFobbF-39FrsHTm9cWgc
+VITE_GOOGLE_CX=2604700cf916145eb
