--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ STRIPE_SECRET_KEY=sk_test_your_secret_key_here
 
 # Optional: Stripe webhook secret (for production)
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+VITE_GOOGLE_API_KEY=AIzaSyD3lKqpxoBIUoxpFobbF-39FrsHTm9cWgc
+VITE_GOOGLE_CX=2604700cf916145eb
