--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "better-sqlite3": "^11.7.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
+    "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
@@ -62,9 +65,11 @@
     "@swc/core": "^1.13.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.2",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/three": "^0.176.0",
