--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
+    "python": "^0.0.4",
     "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
     "xlsx": "^0.18.5",
