--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "optimize:images": "node scripts/optimize-images.js"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.5.3",
+    "@stripe/terminal-js": "^0.26.0",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "html5-qrcode": "^2.3.8",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
     "python": "^0.0.4",
     "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
+    "stripe": "^20.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
@@ -98,6 +103,7 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^2.12.7",
     "serverless-http": "^3.2.0",
+    "sharp": "^0.34.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
