--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "fusion-starter",
+  "name": "la-reserve",
+  "version": "1.0.0",
+  "buildNumber": "1",
   "private": true,
   "type": "module",
   "pkg": {
@@ -19,7 +21,8 @@
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
-    "optimize:images": "node scripts/optimize-images.js"
+    "optimize:images": "node scripts/optimize-images.js",
+    "generate:icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "@stripe/stripe-js": "^8.5.3",
