--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@stripe/terminal-js": "^0.26.0",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "firebase": "^12.6.0",
     "html5-qrcode": "^2.3.8",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
@@ -37,7 +39,6 @@
     "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
     "stripe": "^20.0.0",
-    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
