--- a/.env
+++ b/.env
@@ -9,3 +9,11 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 VITE_GOOGLE_API_KEY=AIzaSyD3lKqpxoBIUoxpFobbF-39FrsHTm9cWgc
 VITE_GOOGLE_CX=2604700cf916145eb
+
+ apiKey: "AIzaSyDP0AM7NevNSMc_qN8CXxPScyi9PSLZ1ZY",
+  authDomain: "inventorybar-5312d.firebaseapp.com",
+  projectId: "inventorybar-5312d",
+  storageBucket: "inventorybar-5312d.firebasestorage.app",
+  messagingSenderId: "324572479408",
+  appId: "1:324572479408:web:8b0398558391afb86c2075",
+  measurementId: "G-ZQ79H4KFE4"
