--- a/.env
+++ b/.env
@@ -10,10 +10,12 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 VITE_GOOGLE_API_KEY=AIzaSyD3lKqpxoBIUoxpFobbF-39FrsHTm9cWgc
 VITE_GOOGLE_CX=2604700cf916145eb
 
- apiKey: "AIzaSyDP0AM7NevNSMc_qN8CXxPScyi9PSLZ1ZY",
-  authDomain: "inventorybar-5312d.firebaseapp.com",
-  projectId: "inventorybar-5312d",
-  storageBucket: "inventorybar-5312d.firebasestorage.app",
-  messagingSenderId: "324572479408",
-  appId: "1:324572479408:web:8b0398558391afb86c2075",
-  measurementId: "G-ZQ79H4KFE4"
+VITE_FIREBASE_API_KEY=AIzaSyDP0AM7NevNSMc_qN8CXxPScyi9PSLZ1ZY
+VITE_FIREBASE_AUTH_DOMAIN=inventorybar-5312d.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=inventorybar-5312d
+VITE_FIREBASE_STORAGE_BUCKET=inventorybar-5312d.firebasestorage.app
+VITE_FIREBASE_APP_ID=1:324572479408:web:8b0398558391afb86c2075
+VITE_FIREBASE_MEASUREMENT_ID=G-ZQ79H4KFE4
+VITE_MESSAGING_SENDER_ID=324572479408
+
+VITE_GOOGLE_CLIENT_ID=956744077500-77fq1ml9rtl8de593pnhmo94a60j8635.apps.googleusercontent.com
