--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@stripe/stripe-js": "^8.5.3",
     "@stripe/terminal-js": "^0.26.0",
     "better-sqlite3": "^11.7.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "firebase": "^12.6.0",
     "html5-qrcode": "^2.3.8",
+    "openai": "^6.9.1",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
     "python": "^0.0.4",
