Add Capacitor iOS/Android platforms

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
     "optimize:images": "node scripts/optimize-images.js",
-    "generate:icons": "node scripts/generate-icons.js"
+    "generate:icons": "node scripts/generate-icons.js",
+    "cap:sync": "npm run build:client && npx cap sync",
+    "cap:ios": "npm run cap:sync && npx cap open ios",
+    "cap:android": "npm run cap:sync && npx cap open android"
   },
   "dependencies": {
     "@stripe/stripe-js": "^8.5.3",
@@ -46,6 +49,10 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
