--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^5.1.0",
     "firebase": "^12.6.0",
     "html5-qrcode": "^2.3.8",
+    "next": "^16.0.7",
     "openai": "^6.9.1",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
