--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -15,9 +15,9 @@
 	<key>BUNDLE_ID</key>
 	<string>app.inventory</string>
 	<key>PROJECT_ID</key>
-	<string>inventorybar-5312d</string>
+	<string>inventorybar</string>
 	<key>STORAGE_BUCKET</key>
-	<string>inventorybar-5312d.firebasestorage.app</string>
+	<string>inventorybar.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
