--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
     "stripe": "^20.0.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.25.76"
   },
   "devDependencies": {
